# SI7011-DeepLearning

./: .gitignore  .gitignore copy  README.md
Lecture01/: README.md
Lecture01/notebooks/: 1_3-LogisticRegression-HalfMoon.ipynb
Lecture02/: README.md
Lecture02/nn_visualizer/: README.md  demo.html  nn_visualizer.py  requirements.txt
Lecture02/notebooks/4_full_project/: PyTorch-Tutorial-Avanzado.ipynb  PyTorchLightning-Tutorial.ipynb
Lecture03-04/: README.md
Lecture03-04/notebooks/1_ccn_training/: part-2-cnn.ipynb  part-4-resnet-scratch.ipynb
Lecture03-04/notebooks/3_transfer/: part-3-resnet18-transfer-finetune-all.ipynb  part-3-resnet18-transfer-last-layer-only.ipynb  part-4-resnet-multi-gpu.ipynb
Lecture03-04/notebooks/5_scripting/: Makefile  README.md
Lecture03-04/notebooks/pytorch/5_scripting/: pyproject.toml
Lecture03-04/notebooks/pytorch/5_scripting/cifar10_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Lecture03-04/notebooks/pytorch/5_scripting/config/: base.yaml
Lecture03-04/notebooks/pytorch/5_scripting/scripts/: evaluate.py  prepare_data.py  serve.py
Lecture03-04/notebooks/pytorch/5_scripting/src/data/: dataset.py
Lecture03-04/notebooks/pytorch/5_scripting/src/models/: resnet.py
Lecture03-04/notebooks/pytorch/5_scripting/src/training/: callbacks.py
Lecture05/: Lecture05.ipynb  Lecture05.slides.html  README.md  scripting_presentation.html
Lecture05/notebooks/: timeseries.ipynb
Lecture05/notebooks/excercise/: bikes_gru_best.pt  dataset_44063.csv  part-1-data.ipynb  (+1 more)
Lecture06/: README.md
(+205 files in other folders)
